# franken_numpy

./: .gitignore  .rchignore  .skill-loop-progress.md  AGENTS.md  CHANGELOG.md  COMPREHENSIVE_SPEC_FOR_FRANKENNUMPY_V1.md  Cargo.toml  DESTRUCTIVE_OPS_LOG.md  EXHAUSTIVE_LEGACY_ANALYSIS.md  EXISTING_NUMPY_STRUCTURE.md  FEATURE_PARITY.md  PARAMETER_PARITY_TODO.md  PARITY-COVERAGE.md  PLAN_TO_PORT_NUMPY_TO_RUST.md  PROPOSED_ARCHITECTURE.md  README.md  TODO_GRANULAR_EXECUTION.md  UPGRADE_LOG.md  audit_numpy_mocks.md  audit_numpy_reality.md  rust-toolchain.toml  test_parity.py
crates/fnp-conformance/: COVERAGE.md  Cargo.toml  DISCREPANCIES.md
crates/fnp-conformance/benches/: criterion_core_ops.rs
crates/fnp-conformance/fixtures/: COVERAGE.generated.md  PROVENANCE.md  README.md  REGENERATION_REPORT.md  datetime_adversarial_cases.json  datetime_differential_cases.json  datetime_metamorphic_cases.json  dtype_promotion_cases.json  fft_adversarial_cases.json  fft_differential_cases.json  fft_metamorphic_cases.json  io_adversarial_cases.json  io_differential_cases.json  io_metamorphic_cases.json  iter_adversarial_cases.json  iter_differential_cases.json  iter_metamorphic_cases.json  linalg_adversarial_cases.json  linalg_differential_cases.json  linalg_metamorphic_cases.json  masked_adversarial_cases.json  masked_differential_cases.json  masked_metamorphic_cases.json  override_audit_cases.json  parallel_calibration_matrix_smoke.json  polynomial_adversarial_cases.json  polynomial_differential_cases.json  polynomial_metamorphic_cases.json  rng_adversarial_cases.json  rng_differential_cases.json  rng_distribution_differential_cases.json  rng_metamorphic_cases.json  rng_statistical_cases.json  runtime_policy_adversarial_cases.json  runtime_policy_cases.json  runtime_policy_metamorphic_cases.json  shape_stride_adversarial_cases.json  shape_stride_cases.json  shape_stride_metamorphic_cases.json  signal_adversarial_cases.json  (+9 more)
crates/fnp-conformance/src/: benchmark.rs  contract_schema.rs  cross_engine_benchmark.rs  diagnostic_oracle.rs  divergence_ledger.rs  dtype_shape_diagnostics.rs  fnp_python_api_coverage.rs  fnp_python_conformance_shards.rs  io_diagnostics.rs  lib.rs  oracle_drift_matrix.rs  raptorq_artifacts.rs  security_contracts.rs  swarm_handoff.rs  test_contracts.rs  ufunc_differential.rs  workflow_scenarios.rs
crates/fnp-conformance/tests/: codebase_hygiene.rs  concurrency_safety.rs  numpy_reference_ops.rs  profiling_baseline.rs  smoke.rs
crates/fnp-dtype/: Cargo.toml
crates/fnp-dtype/benches/: dtype_ops.rs
crates/fnp-dtype/fuzz/: Cargo.toml  rust-toolchain.toml
crates/fnp-dtype/src/: bin_test.rs  lib.rs
crates/fnp-dtype/tests/: conformance_dtype.rs  dtype_comprehensive.rs  golden_dtype.rs  metamorphic_dtype.rs
crates/fnp-io/: Cargo.toml
crates/fnp-io/benches/: criterion_io.rs
crates/fnp-io/fuzz/: Cargo.toml
crates/fnp-io/src/: lib.rs
crates/fnp-io/tests/: fuzz_regression_header.rs  golden_text_io.rs  metamorphic_io.rs  npy_npz_diagnostic.rs  npy_numpy_conformance.rs  savetxt_printf_conformance.rs  savetxt_printf_golden.tsv
crates/fnp-iter/: Cargo.toml
crates/fnp-iter/benches/: criterion_iter.rs
crates/fnp-iter/fuzz/: Cargo.toml
crates/fnp-iter/src/: lib.rs
crates/fnp-iter/tests/: golden_iter.rs  iter_comprehensive.rs  metamorphic_iter.rs
crates/fnp-linalg/: Cargo.toml
crates/fnp-linalg/benches/: batch_eigh.rs  batch_matrix_rank.rs  batch_solve.rs  criterion_linalg.rs  gemm_microkernel.rs  kron.rs  tsqr.rs
crates/fnp-linalg/examples/: perf_clu.rs  perf_eig.rs  perf_eigvalsh.rs  perf_lu.rs  perf_lu_parallel.rs  perf_misc.rs  perf_qr.rs  perf_svd.rs
crates/fnp-linalg/fuzz/: Cargo.toml
crates/fnp-linalg/src/: lib.rs
crates/fnp-linalg/tests/: conformance_linalg.rs  golden_linalg.rs  metamorphic_linalg.rs  solve_perf.rs
crates/fnp-ndarray/: Cargo.toml
crates/fnp-ndarray/benches/: criterion_ndarray.rs
crates/fnp-ndarray/fuzz/: Cargo.toml
crates/fnp-ndarray/src/: lib.rs
crates/fnp-ndarray/tests/: conformance_broadcast.rs  golden_layout.rs  metamorphic_shapes.rs  test_strided_flaw.rs
crates/fnp-python/: COMPLIANCE.generated.md  Cargo.toml  POLYNOMIAL_COMPLIANCE.generated.md  RANDOM_COMPLIANCE.generated.md
crates/fnp-python/benches/: criterion_python_argsort.rs  criterion_python_complex.rs  criterion_python_io_text.rs  criterion_python_linalg.rs  criterion_python_median_gate.rs  criterion_python_misc1.rs  criterion_python_misc2.rs  criterion_python_setops.rs  criterion_python_sortmisc.rs  criterion_python_string.rs  criterion_python_struct.rs  criterion_python_surface.rs  criterion_python_unaryred.rs  criterion_python_unique_rows.rs
crates/fnp-python/src/: lib.rs
crates/fnp-python/tests/: conformance_abs.rs  conformance_all.rs  conformance_allclose.rs  conformance_angle.rs  conformance_any.rs  conformance_apply_funcs.rs  conformance_arctan2.rs  conformance_argmax.rs  conformance_argmin.rs  conformance_argwhere.rs  conformance_arithmetic.rs  conformance_arithmetic_ops.rs  conformance_around.rs  conformance_array_api_extras.rs  conformance_array_creation.rs  conformance_array_creation_base.rs  conformance_array_equal.rs  conformance_array_like.rs  conformance_array_manip.rs  conformance_array_transform.rs  conformance_array_utils.rs  conformance_asarray.rs  conformance_atleast_broadcast.rs  conformance_binary_math.rs  conformance_binary_ops.rs  conformance_bitwise.rs  conformance_bitwise_shifts.rs  conformance_block_concat.rs  conformance_busday.rs  conformance_cbrt_fabs.rs  conformance_clip.rs  conformance_close.rs  conformance_comparison.rs  conformance_comparison_logical.rs  conformance_complex.rs  conformance_complex_ops.rs  conformance_concat_append.rs  (+139 more)
crates/fnp-random/: Cargo.toml
crates/fnp-runtime/: Cargo.toml
crates/fnp-ufunc/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: binary_fromfile.rs  broadcast_shapes.rs  datetime_parsing.rs  dtype_parsing.rs  einsum_subscripts.rs  flatiter_indexing.rs  linalg_parsing.rs  loadtxt_genfromtxt.rs  npy_npz_bytes.rs  signature_parsing.rs  structured_dtype.rs  text_parsing.rs
(+1617 files in other folders)
