[workspace]
resolver = "2"
members = [
  "crates/fnp-dtype",
  "crates/fnp-ndarray",
  "crates/fnp-iter",
  "crates/fnp-ufunc",
  "crates/fnp-linalg",
  "crates/fnp-random",
  "crates/fnp-io",
  "crates/fnp-conformance",
  "crates/fnp-runtime",
  "crates/fnp-python",
]
exclude = [
  "crates/fnp-dtype/fuzz",
  "crates/fnp-ndarray/fuzz",
  "crates/fnp-iter/fuzz",
  "crates/fnp-io/fuzz",
  "crates/fnp-ufunc/fuzz",
  "crates/fnp-random/fuzz",
  "crates/fnp-linalg/fuzz",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license-file = "LICENSE"
repository = "https://github.com/Dicklesworthstone/franken_numpy"
homepage = "https://github.com/Dicklesworthstone/franken_numpy"
readme = "README.md"
keywords = ["numpy", "scientific", "numerical", "array", "ndarray"]
categories = ["science", "mathematics", "data-structures"]

[workspace.dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
criterion = "0.6"

# Profiling profile: optimized + debug symbols + frame pointers for flamegraphs
[profile.release-perf]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
strip = false
