[workspace]
resolver = "2"
members = [
  "crates/fnp-dtype",
  "crates/fnp-ndarray",
  "crates/fnp-iter",
  "crates/fnp-ufunc",
  "crates/fnp-linalg",
  "crates/fnp-random",
  "crates/fnp-io",
  "crates/fnp-conformance",
  "crates/fnp-runtime",
  "crates/fnp-python",
]
exclude = [
  "crates/fnp-dtype/fuzz",
  "crates/fnp-ndarray/fuzz",
  "crates/fnp-iter/fuzz",
  "crates/fnp-io/fuzz",
  "crates/fnp-ufunc/fuzz",
  "crates/fnp-random/fuzz",
  "crates/fnp-linalg/fuzz",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license-file = "LICENSE"
repository = "https://github.com/Dicklesworthstone/franken_numpy"
homepage = "https://github.com/Dicklesworthstone/franken_numpy"
readme = "README.md"
keywords = ["numpy", "scientific", "numerical", "array", "ndarray"]
categories = ["science", "mathematics", "data-structures"]

[workspace.dependencies]
# Shared JSON encoding for conformance fixtures, reports, and evidence ledgers.
serde_json = "1.0.149"
# Derive-backed serialization for cross-crate contract and artifact data models.
serde = { version = "1.0.228", features = ["derive"] }
# Workspace benchmark harness for performance baselines and regression gates.
criterion = { version = "0.6", features = ["html_reports"] }
# CPython bridge used by the NumPy oracle wrappers and Python-facing parity tests.
pyo3 = { version = "0.28.3", features = ["auto-initialize"] }
# Optional structured async runtime for long-running conformance/artifact jobs.
asupersync = { version = "0.3.1", default-features = false }

# Profiling profile: optimized + debug symbols + frame pointers for flamegraphs
[profile.release-perf]
inherits = "release"
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
