[workspace]
resolver = "2"
members = [
  "crates/fnp-dtype",
  "crates/fnp-ndarray",
  "crates/fnp-iter",
  "crates/fnp-ufunc",
  "crates/fnp-linalg",
  "crates/fnp-random",
  "crates/fnp-io",
  "crates/fnp-conformance",
  "crates/fnp-runtime",
  "crates/fnp-python",
]
exclude = [
  "crates/fnp-dtype/fuzz",
  "crates/fnp-ndarray/fuzz",
  "crates/fnp-iter/fuzz",
  "crates/fnp-io/fuzz",
  "crates/fnp-ufunc/fuzz",
  "crates/fnp-random/fuzz",
  "crates/fnp-linalg/fuzz",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license-file = "LICENSE"
repository = "https://github.com/Dicklesworthstone/franken_numpy"
homepage = "https://github.com/Dicklesworthstone/franken_numpy"
readme = "README.md"
keywords = ["numpy", "scientific", "numerical", "array", "ndarray"]
categories = ["science", "mathematics", "data-structures"]

[workspace.dependencies]
# Shared JSON encoding for conformance fixtures, reports, and evidence ledgers.
serde_json = "1.0.149"
# Property-based testing for metamorphic test suites.
proptest = "1.5"
# Derive-backed serialization for cross-crate contract and artifact data models.
serde = { version = "1.0.228", features = ["derive"] }
# Workspace benchmark harness for performance baselines and regression gates.
criterion = { version = "0.6", features = ["html_reports"] }
# OS entropy source for NumPy-compatible unseeded RNG constructors.
getrandom = "0.3.4"
# CPython bridge used by the NumPy oracle wrappers and Python-facing parity tests.
pyo3 = { version = "0.28.3", features = ["auto-initialize"] }
# Optional structured async runtime for long-running conformance/artifact jobs.
asupersync = { version = "0.3.1", default-features = false }
# Safe-Rust data parallelism (work-stealing pool) for compute-bound numeric
# kernels (e.g. the register-tiled GEMM). Pure safe Rust — no C BLAS linkage.
rayon = "1.10"

# Profiling profile: optimized + debug symbols + frame pointers for flamegraphs.
# Build with: RUSTFLAGS="-C force-frame-pointers=yes" cargo build --profile release-perf
# `strip`/`opt-level` are pinned explicitly so this stays profilable even if a
# size-optimized [profile.release] (strip=true) is ever added to the workspace.
[profile.release-perf]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
strip = false

# Bench profile keeps line tables + symbols so criterion bench binaries are
# profilable with samply/perf (pair with RUSTFLAGS="-C force-frame-pointers=yes").
# Debug-info presence does not affect the optimized code's timing.
[profile.bench]
debug = "line-tables-only"
strip = false
