[package]
name = "franken_numpy-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
fnp-io = { path = "../crates/fnp-io" }
fnp-ufunc = { path = "../crates/fnp-ufunc" }
libfuzzer-sys = "0.4.10"

[[bin]]
name = "npy_npz_bytes"
path = "fuzz_targets/npy_npz_bytes.rs"
test = false
doc = false
bench = false

[[bin]]
name = "text_parsing"
path = "fuzz_targets/text_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "signature_parsing"
path = "fuzz_targets/signature_parsing.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
