[package]
name = "franken_numpy-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
fnp-dtype = { path = "../crates/fnp-dtype" }
fnp-io = { path = "../crates/fnp-io" }
fnp-linalg = { path = "../crates/fnp-linalg" }
fnp-ndarray = { path = "../crates/fnp-ndarray" }
fnp-ufunc = { path = "../crates/fnp-ufunc" }
libfuzzer-sys = "0.4.10"

[[bin]]
name = "npy_npz_bytes"
path = "fuzz_targets/npy_npz_bytes.rs"
test = false
doc = false
bench = false

[[bin]]
name = "text_parsing"
path = "fuzz_targets/text_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "signature_parsing"
path = "fuzz_targets/signature_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "datetime_parsing"
path = "fuzz_targets/datetime_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "einsum_subscripts"
path = "fuzz_targets/einsum_subscripts.rs"
test = false
doc = false
bench = false

[[bin]]
name = "structured_dtype"
path = "fuzz_targets/structured_dtype.rs"
test = false
doc = false
bench = false

[[bin]]
name = "broadcast_shapes"
path = "fuzz_targets/broadcast_shapes.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dtype_parsing"
path = "fuzz_targets/dtype_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "linalg_parsing"
path = "fuzz_targets/linalg_parsing.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
