[package]
name = "fnp-conformance"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Differential conformance harness: numpy oracle capture, fixtures, drift detection."

[dependencies]
fnp-dtype = { path = "../fnp-dtype", version = "0.1.0" }
fnp-io = { path = "../fnp-io", version = "0.1.0" }
fnp-iter = { path = "../fnp-iter", version = "0.1.0" }
fnp-linalg = { path = "../fnp-linalg", version = "0.1.0" }
fnp-ndarray = { path = "../fnp-ndarray", version = "0.1.0" }
fnp-random = { path = "../fnp-random", version = "0.1.0" }
fnp-runtime = { path = "../fnp-runtime", version = "0.1.0" }
fnp-ufunc = { path = "../fnp-ufunc", version = "0.1.0" }
asupersync = { version = "0.3.1" }
base64 = "0.22.1"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml_ng = "0.10.0"
sha2 = "0.11.0"

[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "criterion_core_ops"
harness = false
