[package]
name = "fnp-conformance"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Differential conformance harness: numpy oracle capture, fixtures, drift detection."

[dependencies]
fnp-dtype = { path = "../fnp-dtype", version = "0.1.0" }
fnp-io = { path = "../fnp-io", version = "0.1.0" }
fnp-iter = { path = "../fnp-iter", version = "0.1.0" }
fnp-linalg = { path = "../fnp-linalg", version = "0.1.0" }
fnp-ndarray = { path = "../fnp-ndarray", version = "0.1.0" }
fnp-random = { path = "../fnp-random", version = "0.1.0" }
fnp-runtime = { path = "../fnp-runtime", version = "0.1.0" }
fnp-ufunc = { path = "../fnp-ufunc", version = "0.1.0" }
# asupersync inherits default-features=false from the workspace pin (set that way
# so fnp-runtime can use the dep as optional). Verified 2026-05-20 by running
# `cargo test -p fnp-conformance --lib`: 215 tests pass without asupersync default
# features. If a future change needs an asupersync default feature, switch this
# line to the long form: `asupersync = { workspace = true, features = ["..."] }`.
asupersync.workspace = true
base64 = "0.22.1"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml_ng = "0.10.0"
sha2 = "0.11.0"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "criterion_core_ops"
harness = false

# Note: this crate's 47 binaries under src/bin/ are auto-discovered by
# cargo (no [[bin]] entries needed). Add a new .rs file under src/bin/
# and it becomes a `cargo run -p fnp-conformance --bin <name>` target
# automatically. See README "Conformance Methodology Deep-Dive" for the
# active workflow tools and the 27 historical phase2c one-shot generators.
