[package]
name = "fnp-dtype"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "NumPy dtype model: scalar types, casting rules, promotion table, and parser for FrankenNumPy."

[dependencies]
half = "2.7.1"

[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "dtype_ops"
harness = false
