[package]
name = "fnp-io"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "NumPy file format I/O: NPY/NPZ load and save, text I/O, with bounded resource consumption."

[dependencies]
bytemuck = "1.25.0"
flate2 = "1.1.9"

[dev-dependencies]
insta = "1.47.2"
criterion = "0.6"

[[bench]]
name = "criterion_io"
harness = false
