[package]
name = "fnp-iter"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "NumPy-compatible iteration primitives: nditer, flatiter, ndindex, and stride-aware planners."

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
