[package]
name = "fnp-iter"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "NumPy-compatible iteration primitives: nditer, flatiter, ndindex, and stride-aware planners."

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Note: fnp-iter is the lone crate without a benches/ Criterion file.
# Iteration plans (NditerPlan / NditerStep / FlatIterIndex / TransferSelectorInput)
# are stride-only — they don't touch element values, so per-call latency is
# dominated by allocation rather than arithmetic. Cross-engine NumPy parity for
# iteration ergonomics is exercised by the `nditer_python*` integration tests
# and `crates/fnp-iter/tests/metamorphic_iter.rs`. If iteration becomes a
# hotspot, mirror the criterion_ndarray.rs structure to add benches/.
