[package]
name = "fnp-iter"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "NumPy-compatible iteration primitives: nditer, flatiter, ndindex, and stride-aware planners."

[dependencies]
# serde / serde_json: serialization for `NditerPlan` / `NditerStep` snapshots
# (used by the `nditer_python*` parity bridge to round-trip plan state into
# Python for cross-engine comparison) plus diagnostic JSON output from
# `validate_flatiter_read` / `validate_nditer_flags`.
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "criterion_iter"
harness = false
