[package]
name = "fnp-linalg"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Pure-Rust linear algebra: SVD, QR, Cholesky, eigendecomposition, solvers, norms."

[dependencies]
fnp-ndarray = { version = "0.1.0", path = "../fnp-ndarray" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "criterion_linalg"
harness = false
