[package]
name = "fnp-linalg"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Pure-Rust linear algebra: SVD, QR, Cholesky, eigendecomposition, solvers, norms."

[dependencies]
# fnp-ndarray: shape/stride contracts for matrix decompositions. Every linalg
# op (solve, svd_mxn, eig_nxn, cholesky_nxn, lu_factor, etc.) verifies shape
# legality via SCE primitives (validate_matrix_shape, validate_square_matrix)
# before allocating workspace or descending into kernel code.
fnp-ndarray = { version = "0.1.0", path = "../fnp-ndarray" }

# rayon: data parallelism for the embarrassingly-parallel batched (stacked
# matrix) paths. Each lane runs an identical, independent scalar kernel on a
# disjoint sub-matrix, so parallelizing across lanes is bit-for-bit identical
# to the serial loop while exploiting all cores.
rayon = { workspace = true }

[dev-dependencies]
criterion.workspace = true
sha2 = "0.11.0"

[[bench]]
name = "criterion_linalg"
harness = false

[[bench]]
name = "kron"
harness = false

[[bench]]
name = "batch_eigh"
harness = false

[[bench]]
name = "batch_matrix_rank"
harness = false

[[bench]]
name = "batch_solve"
harness = false
