[package]
name = "fnp-ndarray"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Shape, stride, broadcast, and view-legality primitives for FrankenNumPy ndarray semantics."

[dependencies]

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "criterion_ndarray"
harness = false
