[package]
name = "fnp-python"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "PyO3 module exposing the full numpy.__all__ surface for drop-in fnp_python use."

[lib]
name = "fnp_python"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python-extension = ["pyo3/extension-module"]

[dependencies]
pyo3 = { workspace = true }
fnp-dtype = { path = "../fnp-dtype" }
fnp-iter = { path = "../fnp-iter" }
fnp-ndarray = { path = "../fnp-ndarray" }
fnp-ufunc = { path = "../fnp-ufunc" }
fnp-linalg = { path = "../fnp-linalg" }
fnp-random = { path = "../fnp-random" }
fnp-io = { path = "../fnp-io" }
