[package]
name = "fnp-random"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "NumPy-parity RNG: PCG64DXSM, distributions, oracle-verified deterministic streams."

[dependencies]
fnp-ndarray = { version = "0.1.0", path = "../fnp-ndarray" }

[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "random_ops"
harness = false
