[package]
name = "fnp-runtime"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[features]
default = []
asupersync = ["dep:asupersync"]
frankentui = ["dep:ftui"]

[dependencies]
asupersync = { version = "0.3.1", default-features = false, optional = true }
ftui = { version = "0.3.1", default-features = false, optional = true }
