[package]
name = "fnp-runtime"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Dual-mode runtime: strict and hardened policy, evidence ledger, decision audit."

[features]
default = []
asupersync = ["dep:asupersync"]
frankentui = ["dep:ftui"]

[dependencies]
asupersync = { version = "0.3.1", default-features = false, optional = true }
ftui = { version = "0.3.1", default-features = false, optional = true }
