[package]
name = "fnp-runtime"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Dual-mode runtime: strict and hardened policy, evidence ledger, decision audit."

[features]
default = []
asupersync = ["dep:asupersync"]
frankentui = ["dep:ftui"]

[dependencies]
# asupersync (optional, gated by `asupersync` feature): structured-async
# runtime used by `fnp-conformance` for RaptorQ encoding pipelines, oracle
# capture orchestration, and cancellation-safe long-running benchmark jobs.
# Default-features=false set at workspace level (see /Cargo.toml comment).
asupersync = { workspace = true, optional = true }
# ftui (frankentui, optional, gated by `frankentui` feature): terminal-native
# observability surface for parity-drift and performance-delta dashboards.
# Default-features=false to avoid pulling the full TUI runtime when only the
# typed capability snapshots are needed by the evidence-ledger types.
ftui = { version = "0.3.1", default-features = false, optional = true }
