[package]
name = "fnp-ufunc"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Elementwise and reduction operations: arithmetic, transcendentals, comparisons, ufuncs, gufuncs."

[dependencies]
fnp-dtype = { path = "../fnp-dtype", version = "0.1.0" }
fnp-ndarray = { path = "../fnp-ndarray", version = "0.1.0" }
fnp-linalg = { path = "../fnp-linalg", version = "0.1.0" }
fnp-runtime = { path = "../fnp-runtime", version = "0.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "elementwise"
harness = false
