[package]
name = "fnp-ufunc"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Elementwise and reduction operations: arithmetic, transcendentals, comparisons, ufuncs, gufuncs."

[dependencies]
# fnp-* path deps: this crate sits at the top of the engine layering.
# - fnp-dtype: DType variants + promotion table (used by every ufunc)
# - fnp-ndarray: SCE for shape/stride/broadcast (every reduction + view op)
# - fnp-linalg: bridge for ops that delegate to linalg (matmul fast paths, etc.)
# - fnp-runtime: RuntimeMode + DecisionAction (consulted by the float-error
#   machine and the hardened-mode validators)
fnp-dtype = { path = "../fnp-dtype", version = "0.1.0" }
fnp-ndarray = { path = "../fnp-ndarray", version = "0.1.0" }
fnp-linalg = { path = "../fnp-linalg", version = "0.1.0" }
fnp-runtime = { path = "../fnp-runtime", version = "0.1.0" }
# rayon: data parallelism for compute-bound kernels (register-tiled GEMM). Output
# row bands are independent, so parallelism keeps results bit-for-bit identical.
rayon = { workspace = true }
# serde / serde_json: oracle fixture I/O for the differential harness +
# gufunc signature parsing diagnostics + RNG witness serialization.
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
# sha2: deterministic golden-output digests for bitwise matmul non-regression tests.
sha2 = "0.11.0"

[[bench]]
name = "elementwise"
harness = false

[[bench]]
name = "transcendental"
harness = false

[[bench]]
name = "contraction"
harness = false

[[bench]]
name = "searchsorted"
harness = false

[[bench]]
name = "cumminmax"
harness = false

[[bench]]
name = "transpose"
harness = false

[[bench]]
name = "broadcast"
harness = false

[[bench]]
name = "pad"
harness = false

[[bench]]
name = "repeat"
harness = false

[[bench]]
name = "pad_constant"
harness = false

[[bench]]
name = "flip"
harness = false

[[bench]]
name = "clip"
harness = false

[[bench]]
name = "take_axis"
harness = false

[[bench]]
name = "take_along_axis"
harness = false

[[bench]]
name = "einsum_general"
harness = false

[[bench]]
name = "histogram_full"
harness = false

[[bench]]
name = "meshgrid"
harness = false

[[bench]]
name = "triangle"
harness = false

[[bench]]
name = "bincount"
harness = false

[[bench]]
name = "set_ops"
harness = false

[[bench]]
name = "cov"
harness = false

[[bench]]
name = "convolve"
harness = false
